XPath Sortable List - CSS fix to ensure text in selected items is visible
--HG--
branch : 6.0.0

--- a/uComponents.DataTypes/XPathSortableList/XPathSortableList.css
+++ b/uComponents.DataTypes/XPathSortableList/XPathSortableList.css
@@ -116,6 +116,7 @@
 .xpath-sortable-list ul.sortable-list li div {
     width: 278px;
     overflow: hidden;
+    display:inline;
 }
 
 .xpath-sortable-list ul.sortable-list a
